[workspace]
members = [
	"tm4c-hal",
	"tm4c123x-hal",
	"examples/tiva-c-launchpad",
]
resolver = "2"
	#"tm4c129x-hal",
	#"examples/tiva-c-connected-launchpad",
	#"examples/msp432-launchpad-for-ethernet",

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
